--- a/package.json
+++ b/package.json
@@ -5,8 +5,13 @@
   "homepage:": "https://payloadcms.com",
   "repository": "https://github.com/manutepowa/payload-plugin-masquerade",
   "description": "Masquerade user for Payload CMS",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./src/index.ts",
+      "require": "./src/index.ts",
+      "types": "./src/types.ts"
+    }
+  },
   "keywords": [
     "payload",
     "cms",
@@ -20,7 +25,10 @@
   ],
   "scripts": {
     "dev": "cd dev && cross-env NODE_OPTIONS=--no-deprecation next dev",
-    "build": "tsc",
+    "build": "pnpm copyfiles && pnpm build:swc && pnpm build:types",
+    "build:swc": "swc ./src -d ./dist --config-file .swcrc",
+    "build:types": "tsc --emitDeclarationOnly --outDir dist",
+    "copyfiles": "copyfiles -u 1 \"src/**/*.{html,css,scss,ttf,woff,woff2,eot,svg,jpg,png,json}\" dist/",
     "test": "cd test && jest --config=./jest.config.js",
     "lint": "eslint src",
     "payload": "cd dev && cross-env NODE_OPTIONS=--no-deprecation payload",
@@ -42,6 +50,8 @@
     "@payloadcms/next": "3.0.0-beta.102",
     "@payloadcms/plugin-cloud": "3.0.0-beta.102",
     "@payloadcms/richtext-lexical": "3.0.0-beta.102",
+    "@swc/cli": "^0.4.0",
+    "@swc/core": "^1.7.26",
     "@swc/jest": "0.2.36",
     "@types/jest": "29.5.12",
     "@types/jsonwebtoken": "9.0.6",
@@ -49,6 +59,7 @@
     "@types/react-dom": "npm:types-react-dom@19.0.0-rc.0",
     "@typescript-eslint/eslint-plugin": "7.13.1",
     "@typescript-eslint/parser": "7.13.1",
+    "copyfiles": "^2.4.1",
     "cross-env": "7.0.3",
     "dotenv": "16.4.5",
     "eslint": "9.10.0",
@@ -68,5 +79,17 @@
     "rimraf": "5.0.7",
     "sharp": "0.33.4",
     "typescript": "5.4.5"
+  },
+  "publishConfig": {
+    "exports": {
+      ".": {
+        "import": "./dist/index.js",
+        "require": "./dist/index.js",
+        "types": "./dist/types.d.ts"
+      }
+    },
+    "main": "./dist/index.js",
+    "registry": "https://registry.npmjs.org/",
+    "types": "./dist/types.d.ts"
   }
 }
