--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@payloadcms/next": "3.0.0-beta.102",
     "@payloadcms/plugin-cloud": "3.0.0-beta.102",
     "@payloadcms/richtext-lexical": "3.0.0-beta.102",
+    "@payloadcms/ui": "3.0.0-beta.102",
     "@swc/cli": "^0.4.0",
     "@swc/core": "^1.7.26",
     "@swc/jest": "0.2.36",
