--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "payload-plugin-masquerade",
-  "version": "0.0.1",
+  "version": "0.0.2",
+  "private": false,
   "homepage:": "https://payloadcms.com",
   "repository": "https://github.com/manutepowa/payload-plugin-masquerade",
   "description": "Masquerade user for Payload CMS",
@@ -11,11 +12,12 @@
     ".": {
       "import": "./src/index.ts",
       "require": "./src/index.ts",
-      "types": "./src/types.ts"
+      "types": "./src/index.ts"
     },
     "./ui": {
       "import": "./src/ui/index.ts",
-      "require": "./src/ui/index.ts"
+      "require": "./src/ui/index.ts",
+      "types": "./src/ui/index.ts"
     }
   },
   "keywords": [
@@ -34,6 +36,7 @@
     "build": "pnpm copyfiles && pnpm build:swc && pnpm build:types",
     "build:swc": "swc ./src -d ./dist --config-file .swcrc",
     "build:types": "tsc --emitDeclarationOnly --outDir dist",
+    "clean": "rimraf dist && rimraf tsconfig.tsbuildinfo",
     "copyfiles": "copyfiles -u 1 \"src/**/*.{html,css,scss,ttf,woff,woff2,eot,svg,jpg,png,json}\" dist/",
     "test": "cd test && jest --config=./jest.config.js",
     "lint": "eslint src",
@@ -42,22 +45,20 @@
     "generate:types": "payload generate:types",
     "generate:importmap": "cd dev && cross-env NODE_OPTIONS=--no-deprecation payload generate:importmap",
     "lint:fix": "eslint --fix --ext .ts,.tsx src",
-    "clean": "rimraf dist && rimraf dev/.next",
     "prepublishOnly": "pnpm clean && pnpm build"
   },
   "peerDependencies": {
     "payload": "3.0.0-beta.102"
   },
   "devDependencies": {
-    "payload-plugin-masquerade": "file:.",
     "@payloadcms/db-mongodb": "3.0.0-beta.102",
     "@payloadcms/eslint-config": "^1.1.1",
     "@payloadcms/next": "3.0.0-beta.102",
     "@payloadcms/plugin-cloud": "3.0.0-beta.102",
     "@payloadcms/richtext-lexical": "3.0.0-beta.102",
     "@payloadcms/ui": "3.0.0-beta.102",
-    "@swc/cli": "^0.4.0",
-    "@swc/core": "^1.7.26",
+    "@swc/cli": "^0.1.65",
+    "@swc/core": "1.7.26",
     "@swc/jest": "0.2.36",
     "@types/jest": "29.5.12",
     "@types/jsonwebtoken": "9.0.6",
@@ -78,6 +79,7 @@
     "mongodb-client-encryption": "6.0.1",
     "next": "15.0.0-canary.104",
     "payload": "3.0.0-beta.102",
+    "payload-plugin-masquerade": "^0.0.1",
     "prettier": "3.3.2",
     "prettier-plugin-organize-imports": "3.2.4",
     "react": "19.0.0-rc-06d0b89e-20240801",
@@ -91,11 +93,11 @@
       ".": {
         "import": "./dist/index.js",
         "require": "./dist/index.js",
-        "types": "./dist/types.d.ts"
+        "types": "./dist/index.d.ts"
       }
     },
     "main": "./dist/index.js",
     "registry": "https://registry.npmjs.org/",
-    "types": "./dist/types.d.ts"
+    "types": "./dist/index.d.ts"
   }
 }
