--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,40 @@
 {
   "compilerOptions": {
-    "lib": ["dom", "dom.iterable", "esnext"],
-    "target": "ESNext",
-    "outDir": "./dist",
-    "allowJs": true,
-    "module": "esnext",
-    "moduleResolution": "bundler",
-    "sourceMap": true,
-    "jsx": "react",
-    "esModuleInterop": true,
+    "composite": true, // Make sure typescript knows that this module depends on their references
+    "noEmit": false /* Do not emit outputs. */,
+    "emitDeclarationOnly": true,
+    "outDir": "./dist" /* Specify an output folder for all emitted files. */,
+    "rootDir": "./src" /* Specify the root folder within your source files. */,
     "declaration": true,
-    "declarationDir": "./dist",
+    "declarationMap": true,
+    "allowJs": true,
+    "checkJs": false,
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "jsx": "preserve",
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "skipLibCheck": true,
-    "strict": true
+    "moduleResolution": "Bundler",
+    "module": "ES6",
+    "sourceMap": true,
+    "strict": true,
+    "incremental": true,
+    "isolatedModules": true,
+    "target": "ESNext"
   },
-  "include": ["src/**/*"]
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.tsx",
+    "src/**/*.d.ts",
+    "src/**/*.json"
+  ],
+  "exclude": [
+    "dist",
+    "build",
+    "node_modules"
+  ]
 }
