--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "payload-plugin-masquerade",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "private": false,
   "homepage:": "https://payloadcms.com",
   "repository": "https://github.com/manutepowa/payload-plugin-masquerade",
@@ -8,17 +8,17 @@
   "author": "manutepowa@gmail.com",
   "license": "MIT",
   "type": "module",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "exports": {
     ".": {
       "import": "./src/index.ts",
-      "require": "./src/index.ts",
+      "default": "./src/index.ts",
       "types": "./src/index.ts"
     },
     "./ui": {
       "import": "./src/ui/index.ts",
-      "require": "./src/ui/index.ts",
+      "default": "./src/ui/index.ts",
       "types": "./src/ui/index.ts"
     }
   },
