--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "payload-plugin-masquerade",
-  "version": "0.0.11",
+  "version": "0.0.12",
   "private": false,
   "homepage:": "https://payloadcms.com",
   "repository": "https://github.com/manutepowa/payload-plugin-masquerade",
@@ -11,11 +11,6 @@
   "exports": {
     ".": {
       "default": "./src/index.ts",
-      "types": "./src/index.ts"
-    },
-    "./types": {
-      "import": "./src/types.ts",
-      "default": "./src/types.ts",
       "types": "./src/types.ts"
     },
     "./ui": {
@@ -24,8 +19,6 @@
       "types": "./src/ui/index.ts"
     }
   },
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
   "keywords": [
     "payload",
     "cms",
@@ -99,11 +92,6 @@
       ".": {
         "import": "./dist/index.js",
         "default": "./dist/index.js",
-        "types": "./dist/index.d.ts"
-      },
-      "./types": {
-        "import": "./dist/types.js",
-        "default": "./dist/types.js",
         "types": "./dist/types.d.ts"
       },
       "./ui": {
@@ -114,6 +102,6 @@
     },
     "main": "./dist/index.js",
     "registry": "https://registry.npmjs.org/",
-    "types": "./dist/index.d.ts"
+    "types": "./dist/types.d.ts"
   }
 }
