--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "exports": {
     ".": {
       "default": "./src/index.ts",
-      "types": "./src/types.ts"
+      "types": "./src/index.ts"
     },
     "./ui": {
       "import": "./src/ui/index.ts",
@@ -92,7 +92,7 @@
       ".": {
         "import": "./dist/index.js",
         "default": "./dist/index.js",
-        "types": "./dist/types.d.ts"
+        "types": "./dist/index.d.ts"
       },
       "./ui": {
         "import": "./dist/ui/index.js",
@@ -102,6 +102,6 @@
     },
     "main": "./dist/index.js",
     "registry": "https://registry.npmjs.org/",
-    "types": "./dist/types.d.ts"
+    "types": "./dist/index.d.ts"
   }
 }
