--- a/package.json
+++ b/package.json
@@ -10,13 +10,19 @@
   "type": "module",
   "exports": {
     ".": {
-      "default": "./src/index.ts",
-      "types": "./src/index.ts"
+      "import": "./dist/index.js",
+      "require": "./dist/index.js",
+      "types": "./dist/index.d.ts"
     },
     "./ui": {
-      "import": "./src/ui/index.ts",
-      "default": "./src/ui/index.ts",
-      "types": "./src/ui/index.ts"
+      "import": "./dist/ui/index.js",
+      "default": "./dist/ui/index.js",
+      "types": "./dist/ui/index.d.ts"
+    },
+    "./types": {
+      "import": "./dist/types.js",
+      "default": "./dist/types.js",
+      "types": "./dist/types.d.ts"
     }
   },
   "keywords": [
@@ -31,41 +37,30 @@
     "dist"
   ],
   "scripts": {
-    "dev": "cd dev && cross-env NODE_OPTIONS=--no-deprecation next dev",
-    "build": "pnpm copyfiles && pnpm build:swc && pnpm build:types",
-    "build:swc": "swc ./src -d ./dist --config-file .swcrc",
-    "build:types": "tsc --emitDeclarationOnly --outDir dist",
+    "build": "pnpm build:types && pnpm build:swc",
+    "build:swc": "swc ./src -d ./dist --config-file .swcrc --strip-leading-paths --copy-files",
+    "build:types": "tsc --emitDeclarationOnly",
+    "build:dev": "pnpm build --watch",
     "clean": "rimraf dist && rimraf tsconfig.tsbuildinfo",
-    "copyfiles": "copyfiles -u 1 \"src/**/*.{html,css,scss,ttf,woff,woff2,eot,svg,jpg,png,json}\" dist/",
-    "test": "cd test && jest --config=./jest.config.js",
     "lint": "eslint src",
-    "payload": "cd dev && cross-env NODE_OPTIONS=--no-deprecation payload",
-    "dev:lint": "cd dev && cross-env NODE_OPTIONS=--no-deprecation next lint",
-    "generate:types": "payload generate:types",
-    "generate:importmap": "cd dev && cross-env NODE_OPTIONS=--no-deprecation payload generate:importmap",
     "lint:fix": "eslint --fix --ext .ts,.tsx src",
     "prepublishOnly": "pnpm clean && pnpm build"
   },
   "peerDependencies": {
+    "@payloadcms/ui": "3.0.0-beta.102",
+    "next": "15.0.0-canary.104",
     "payload": "3.0.0-beta.102"
   },
   "devDependencies": {
-    "@payloadcms/db-mongodb": "3.0.0-beta.102",
-    "@payloadcms/eslint-config": "^1.1.1",
-    "@payloadcms/next": "3.0.0-beta.102",
-    "@payloadcms/plugin-cloud": "3.0.0-beta.102",
-    "@payloadcms/richtext-lexical": "3.0.0-beta.102",
-    "@payloadcms/ui": "3.0.0-beta.102",
-    "@swc/cli": "0.1.65",
-    "@swc/core": "1.6.13",
-    "@swc/jest": "0.2.36",
-    "@types/jest": "29.5.12",
-    "@types/jsonwebtoken": "9.0.6",
+    "@swc/cli": "0.4.0",
+    "@swc/core": "1.7.28",
+    "@types/jsonwebtoken": "9.0.7",
     "@types/react": "npm:types-react@19.0.0-rc.0",
     "@types/react-dom": "npm:types-react-dom@19.0.0-rc.0",
     "@typescript-eslint/eslint-plugin": "7.13.1",
     "@typescript-eslint/parser": "7.13.1",
-    "copyfiles": "^2.4.1",
+    "chokidar": "^4.0.1",
+    "copyfiles": "2.4.1",
     "cross-env": "7.0.3",
     "dotenv": "16.4.5",
     "eslint": "9.10.0",
@@ -73,21 +68,16 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "2.29.1",
     "eslint-plugin-prettier": "^5.1.3",
-    "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
-    "mongodb-client-encryption": "6.0.1",
-    "next": "15.0.0-canary.104",
-    "payload": "3.0.0-beta.102",
-    "payload-plugin-masquerade": "0.0.7",
     "prettier": "3.3.2",
     "prettier-plugin-organize-imports": "3.2.4",
     "react": "19.0.0-rc-06d0b89e-20240801",
     "react-dom": "19.0.0-rc-06d0b89e-20240801",
-    "rimraf": "5.0.7",
-    "sharp": "0.33.4",
+    "rimraf": "6.0.1",
     "typescript": "5.4.5"
   },
   "publishConfig": {
+    "access": "public",
     "exports": {
       ".": {
         "import": "./dist/index.js",
@@ -98,10 +88,15 @@
         "import": "./dist/ui/index.js",
         "default": "./dist/ui/index.js",
         "types": "./dist/ui/index.d.ts"
+      },
+      "./types": {
+        "import": "./dist/types.js",
+        "default": "./dist/types.js",
+        "types": "./dist/types.d.ts"
       }
     },
-    "main": "./dist/index.js",
     "registry": "https://registry.npmjs.org/",
+    "main": "./dist/index.js",
     "types": "./dist/index.d.ts"
   }
 }
