--- a/dev/.env.example
+++ b/dev/.env.example
@@ -1,2 +1,2 @@
-DATABASE_URI=mongodb://127.0.0.1/payload-template-blank-3-0
-PAYLOAD_SECRET=YOUR_SECRET_HERE
+DATABASE_URI=mongodb://127.0.0.1/plugin-development
+PAYLOAD_SECRET=hellohereisasecretforyou
