--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "payload-plugin-masquerade",
   "version": "0.1.3",
+  "private": false,
   "homepage:": "https://github.com/manutepowa/payload-plugin-masquerade",
   "repository": "https://github.com/manutepowa/payload-plugin-masquerade",
   "description": "Masquerade user for Payload CMS",
@@ -82,6 +83,8 @@
     "main": "./dist/index.js",
     "types": "./dist/index.d.ts"
   },
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "exports": {
     ".": {
       "import": "./dist/index.js",
