add export types

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "payload-plugin-masquerade",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "private": false,
   "homepage:": "https://github.com/manutepowa/payload-plugin-masquerade",
   "repository": "https://github.com/manutepowa/payload-plugin-masquerade",
@@ -95,6 +95,11 @@
       "import": "./dist/ui/index.js",
       "default": "./dist/ui/index.js",
       "types": "./dist/ui/index.d.ts"
+    },
+    "./types": {
+      "import": "./dist/ui/types.js",
+      "default": "./dist/ui/types.js",
+      "types": "./dist/ui/types.d.ts"
     }
   }
 }
