--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "payload-plugin-masquerade",
-  "version": "0.1.6",
+  "version": "0.1.7",
   "private": false,
   "homepage:": "https://github.com/manutepowa/payload-plugin-masquerade",
   "repository": "https://github.com/manutepowa/payload-plugin-masquerade",
@@ -88,23 +88,23 @@
     "main": "./dist/index.js",
     "types": "./dist/index.d.ts"
   },
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "./src/index.ts",
+  "types": "./src/index.ts",
   "exports": {
     ".": {
-      "import": "./dist/index.js",
-      "default": "./dist/index.js",
-      "types": "./dist/index.d.ts"
+      "import": "./src/index.ts",
+      "default": "./src/index.ts",
+      "types": "./src/index.ts"
     },
     "./ui": {
-      "import": "./dist/ui/index.js",
-      "default": "./dist/ui/index.js",
-      "types": "./dist/ui/index.d.ts"
+      "import": "./src/ui/index.ts",
+      "default": "./src/ui/index.ts",
+      "types": "./src/ui/index.ts"
     },
     "./types": {
-      "import": "./dist/types.js",
-      "default": "./dist/types.js",
-      "types": "./dist/types.d.ts"
+      "import": "./src/types.ts",
+      "default": "./src/types.ts",
+      "types": "./src/types.ts"
     }
   }
 }
