--- a/package.json
+++ b/package.json
@@ -33,15 +33,13 @@
     "prepublishOnly": "pnpm clean && pnpm build"
   },
   "peerDependencies": {
-    "next": "15.0.0-canary.173",
-    "payload": "3.0.0-beta.116"
+    "next": "15.0.0",
+    "payload": "3.0.0-beta.117"
   },
   "dependencies": {
-    "@payloadcms/ui": "3.0.0-beta.116",
+    "@payloadcms/ui": "3.0.0-beta.117",
     "@types/jsonwebtoken": "9.0.7",
-    "jsonwebtoken": "9.0.2",
-    "react": "19.0.0-rc-3edc000d-20240926",
-    "react-dom": "19.0.0-rc-3edc000d-20240926"
+    "jsonwebtoken": "9.0.2"
   },
   "devDependencies": {
     "@payloadcms/eslint-config": "3.0.0-beta.97",
@@ -51,10 +49,10 @@
     "@types/react": "npm:types-react@19.0.0-rc.1",
     "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
     "copyfiles": "2.4.1",
-    "next": "15.0.0-canary.173",
+    "next": "15.0.0",
     "payload": "3.0.0-beta.116",
-    "react": "19.0.0-rc-3edc000d-20240926",
-    "react-dom": "19.0.0-rc-3edc000d-20240926",
+    "react": "19.0.0-rc-65a56d0e-20241020",
+    "react-dom": "19.0.0-rc-65a56d0e-20241020",
     "rimraf": "6.0.1",
     "typescript": "5.5.3"
   },
