feat(dev): migrate dev app to new structure and update deps
- Moved dev app files from `dev/src` to `dev/app`, aligning with Next.js 15
  conventions and Payload v3 best practices.
- Replaced `pages` collection with `posts` and updated types accordingly.
- Added Playwright and Vitest for e2e and integration testing.
- Introduced new `payload.config.ts` with in-memory MongoDB for tests.
- Updated `.gitignore`, `.prettierrc`, and `tsconfig.json` for new structure.
- Removed legacy config, test, and lint files (`jest.config.js`, old ESLint,
  old Prettier, etc.).
- Updated `package.json` and `pnpm-lock.yaml` to latest dependencies and
  scripts for unified dev/test workflow.
- Added example Playwright and Vitest tests, and a seed helper for test users.
- Improved import map and admin config for plugin UI.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "payload-plugin-masquerade",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "private": false,
   "homepage:": "https://github.com/manutepowa/payload-plugin-masquerade",
   "repository": "https://github.com/manutepowa/payload-plugin-masquerade",
@@ -16,53 +16,79 @@
     "react",
     "payload-plugin"
   ],
+  "exports": {
+    ".": {
+      "import": "./src/index.ts",
+      "default": "./src/index.ts",
+      "types": "./src/index.ts"
+    },
+    "./ui": {
+      "import": "./src/ui/index.ts",
+      "default": "./src/ui/index.ts",
+      "types": "./src/ui/index.ts"
+    }
+  },
+  "main": "./src/index.ts",
+  "types": "./src/types.ts",
   "files": [
     "dist"
   ],
   "scripts": {
-    "build": "pnpm copyfiles && pnpm build:swc && pnpm build:types",
-    "build:swc": "swc ./src -d ./dist --config-file .swcrc",
-    "build:types": "tsc --emitDeclarationOnly --outDir dist",
-    "build:dev": "pnpm build --watch",
-    "dev": "pnpm -C dev dev",
+    "build": "pnpm copyfiles && pnpm build:types && pnpm build:swc",
+    "build:swc": "swc ./src -d ./dist --config-file .swcrc --strip-leading-paths",
+    "build:types": "tsc --outDir dist --rootDir ./src",
+    "clean": "rimraf {dist,*.tsbuildinfo}",
     "copyfiles": "copyfiles -u 1 \"src/**/*.{html,css,scss,ttf,woff,woff2,eot,svg,jpg,png,json}\" dist/",
-    "generate:importmap": "pnpm -C dev generate:importmap",
-    "clean": "rimraf dist && rimraf tsconfig.tsbuildinfo",
-    "lint": "eslint src",
-    "lint:fix": "eslint --fix --ext .ts,.tsx src",
-    "prepublishOnly": "pnpm clean && pnpm build"
+    "dev": "next dev dev --turbo",
+    "dev:generate-importmap": "pnpm dev:payload generate:importmap",
+    "dev:generate-types": "pnpm dev:payload generate:types",
+    "dev:payload": "cross-env PAYLOAD_CONFIG_PATH=./dev/payload.config.ts payload",
+    "lint": "eslint",
+    "lint:fix": "eslint ./src --fix",
+    "prepublishOnly": "pnpm clean && pnpm build",
+    "test": "pnpm test:int && pnpm test:e2e",
+    "test:e2e": "playwright test",
+    "test:int": "vitest"
   },
   "peerDependencies": {
-    "next": "^15.0.0",
-    "payload": "^3",
-    "react": "19.0.0-rc-65a56d0e-20241020",
-    "react-dom": "19.0.0-rc-65a56d0e-20241020"
-  },
-  "dependencies": {
-    "@payloadcms/ui": "^3",
-    "@types/jsonwebtoken": "9.0.7",
-    "jsonwebtoken": "9.0.2"
+    "payload": "^3.37.0"
   },
   "devDependencies": {
-    "@payloadcms/eslint-config": "^3",
-    "@swc/cli": "0.1.65",
-    "@swc/core": "1.6.13",
-    "@types/node": "22.7.5",
-    "@types/react": "npm:types-react@19.0.0-rc.1",
-    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
+    "@types/jsonwebtoken": "9.0.7",
+    "jsonwebtoken": "9.0.2",
+    "@eslint/eslintrc": "^3.2.0",
+    "@payloadcms/db-mongodb": "3.37.0",
+    "@payloadcms/db-postgres": "3.37.0",
+    "@payloadcms/db-sqlite": "3.37.0",
+    "@payloadcms/eslint-config": "3.9.0",
+    "@payloadcms/next": "3.37.0",
+    "@payloadcms/richtext-lexical": "3.37.0",
+    "@payloadcms/ui": "3.37.0",
+    "@playwright/test": "^1.52.0",
+    "@swc-node/register": "1.10.9",
+    "@swc/cli": "0.6.0",
+    "@types/node": "^22.5.4",
+    "@types/react": "19.1.0",
+    "@types/react-dom": "19.1.2",
     "copyfiles": "2.4.1",
-    "rimraf": "6.0.1",
-    "typescript": "5.6.3"
-  },
-  "pnpm": {
-    "overrides": {
-      "@types/react": "npm:types-react@19.0.0-rc.1",
-      "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1"
-    }
-  },
-  "overrides": {
-    "@types/react": "npm:types-react@19.0.0-rc.1",
-    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1"
+    "cross-env": "^7.0.3",
+    "eslint": "^9.23.0",
+    "eslint-config-next": "15.3.0",
+    "graphql": "^16.8.1",
+    "mongodb-memory-server": "10.1.4",
+    "next": "15.3.0",
+    "open": "^10.1.0",
+    "payload": "3.37.0",
+    "prettier": "^3.4.2",
+    "qs-esm": "7.0.2",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "rimraf": "3.0.2",
+    "sharp": "0.32.6",
+    "sort-package-json": "^2.10.0",
+    "typescript": "5.7.3",
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^3.1.2"
   },
   "publishConfig": {
     "access": "public",
@@ -76,34 +102,15 @@
         "import": "./dist/ui/index.js",
         "default": "./dist/ui/index.js",
         "types": "./dist/ui/index.d.ts"
-      },
-      "./types": {
-        "import": "./dist/types.js",
-        "default": "./dist/types.js",
-        "types": "./dist/types.d.ts"
       }
     },
-    "registry": "https://registry.npmjs.org/",
     "main": "./dist/index.js",
     "types": "./dist/index.d.ts"
   },
-  "main": "./src/index.ts",
-  "types": "./src/index.ts",
-  "exports": {
-    ".": {
-      "import": "./src/index.ts",
-      "default": "./src/index.ts",
-      "types": "./src/index.ts"
-    },
-    "./ui": {
-      "import": "./src/ui/index.ts",
-      "default": "./src/ui/index.ts",
-      "types": "./src/ui/index.ts"
-    },
-    "./types": {
-      "import": "./src/types.ts",
-      "default": "./src/types.ts",
-      "types": "./src/types.ts"
-    }
-  }
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "sharp"
+    ]
+  },
+  "registry": "https://registry.npmjs.org/"
 }
