--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "payload-plugin-masquerade",
-  "version": "1.2.1",
+  "version": "1.2.2",
   "private": false,
   "homepage:": "https://github.com/manutepowa/payload-plugin-masquerade",
   "repository": "https://github.com/manutepowa/payload-plugin-masquerade",
@@ -53,6 +53,10 @@
   "peerDependencies": {
     "payload": "^3.37.0"
   },
+  "dependencies": {
+    "jsonwebtoken": "9.0.2",
+    "@types/jsonwebtoken": "9.0.9"
+  },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
     "@payloadcms/db-mongodb": "3.41.0",
@@ -65,7 +69,6 @@
     "@playwright/test": "^1.52.0",
     "@swc-node/register": "1.10.10",
     "@swc/cli": "0.6.0",
-    "@types/jsonwebtoken": "9.0.9",
     "@types/node": "^22.5.4",
     "@types/react": "19.1.6",
     "@types/react-dom": "19.1.6",
@@ -74,7 +77,6 @@
     "eslint": "^9.23.0",
     "eslint-config-next": "15.3.3",
     "graphql": "^16.8.1",
-    "jsonwebtoken": "9.0.2",
     "mongodb-memory-server": "10.1.4",
     "next": "15.3.3",
     "open": "^10.1.0",
