--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "payload-plugin-masquerade",
-  "version": "1.3.1",
+  "version": "1.4.0",
   "private": false,
   "homepage:": "https://github.com/manutepowa/payload-plugin-masquerade",
   "repository": "https://github.com/manutepowa/payload-plugin-masquerade",
@@ -51,20 +51,19 @@
     "test:int": "vitest"
   },
   "peerDependencies": {
-    "payload": "^3.37.0"
+    "payload": "^3.44.0"
   },
   "dependencies": {
-    "jsonwebtoken": "9.0.2",
-    "@types/jsonwebtoken": "9.0.9"
+    "uuid": "11.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
-    "@payloadcms/db-mongodb": "3.41.0",
-    "@payloadcms/db-postgres": "3.41.0",
-    "@payloadcms/db-sqlite": "3.41.0",
-    "@payloadcms/next": "3.41.0",
-    "@payloadcms/richtext-lexical": "3.41.0",
-    "@payloadcms/ui": "3.41.0",
+    "@payloadcms/db-mongodb": "3.44.0",
+    "@payloadcms/db-postgres": "3.44.0",
+    "@payloadcms/db-sqlite": "3.44.0",
+    "@payloadcms/next": "3.44.0",
+    "@payloadcms/richtext-lexical": "3.44.0",
+    "@payloadcms/ui": "3.44.0",
     "@playwright/test": "^1.52.0",
     "@swc-node/register": "1.10.10",
     "@swc/cli": "0.6.0",
@@ -79,7 +78,7 @@
     "mongodb-memory-server": "10.1.4",
     "next": "15.3.3",
     "open": "^10.1.0",
-    "payload": "3.41.0",
+    "payload": "3.44.0",
     "prettier": "^3.4.2",
     "qs-esm": "7.0.2",
     "react": "19.1.0",
