--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "payload-plugin-masquerade",
-  "version": "1.4.0",
+  "version": "1.4.1",
   "private": false,
   "homepage:": "https://github.com/manutepowa/payload-plugin-masquerade",
   "repository": "https://github.com/manutepowa/payload-plugin-masquerade",
@@ -29,7 +29,7 @@
     }
   },
   "main": "./src/index.ts",
-  "types": "./src/types.ts",
+  "types": "./src/index.ts",
   "files": [
     "dist"
   ],
@@ -91,7 +91,6 @@
     "vitest": "^3.1.2"
   },
   "publishConfig": {
-    "access": "public",
     "exports": {
       ".": {
         "import": "./dist/index.js",
